--- a/molly/apps/places/templates/places/entity_without_location.html
+++ b/molly/apps/places/templates/places/entity_without_location.html
@@ -2,13 +2,9 @@
 
 {% block title %}
 {% if entity %}
-	{% blocktrans with entity_type.verbose_name_plural|capfirst as type_name and entity.title as title %}
-		{{ type_name }} near {{ title }}
-	{% endblocktrans %}
+    {% blocktrans with entity_type.verbose_name_plural|capfirst as type_name and entity.title as title %}{{ type_name }} near {{ title }}{% endblocktrans %}
 {% else %}
-	{% blocktrans with entity_type.verbose_name_plural|capfirst as type_name %}
-		{{ type_name }} near me
-	{% endblocktrans %}
+    {% blocktrans with entity_type.verbose_name_plural|capfirst as type_name %}{{ type_name }} nearby{% endblocktrans %}
 {% endif %}
 {% endblock %}
 
@@ -16,16 +12,14 @@
 {% block content %}
 
 <div class="section">
-<div class="header">
-  <h2>
-	{% blocktrans with entity_type.verbose_name_plural as type_name and entity.title as title %}
-		{{ type_name }} near {{ title }}
-	{% endblocktrans %}
-  </h2>
-  <div class="note"><div class="bubble pad-10">
-    {% trans "Unfortunately, we do not have a location for this object, and so cannot tell you what is near it." %}
-  </div>
-</div>
+    <div class="header">
+        <h2>
+            {% blocktrans with entity_type.verbose_name_plural as type_name and entity.title as title %}{{ type_name }} near {{ title }}{% endblocktrans %}
+        </h2>
+    </div>
+    <div class="note"><div class="bubble pad-10">
+      {% trans "Unfortunately, we do not have a location for this object, and so cannot tell you what is near it." %}
+    </div></div>
 </div>
 
 {% endblock %}
