--- a/molly/apps/places/templates/places/update_osm.html
+++ b/molly/apps/places/templates/places/update_osm.html
@@ -2,12 +2,12 @@
 {% load molly_maps %}{% load molly_utils %}{% load i18n %}
 
 {% block title %}
-{% blocktrans with entity.title as title %}
-	Update {{ title }}
-{% endblocktrans %}{% endblock %}
+{% blocktrans with entity.title as title %}Update {{ title }}{% endblocktrans %}
+{% endblock %}
 
 {% block extrahead %}{{ block.super }}
-<meta name="robots" content="noindex"/>{% endblock %}
+<meta name="robots" content="noindex"/>
+{% endblock %}
 
 {% block content %}
 
@@ -16,43 +16,24 @@
   
   <div class="article"><div class="bubble pad-5">
     <p>
-    {% blocktrans %}
-	Thank you for wanting to improve the data provided by {{ site_name }}.
-        However, before you submit any changes, you should be aware of the
-        following terms.	
-    {% endblocktrans %}
+    {% blocktrans %}Thank you for wanting to improve the data provided by {{ site_name }}. However, before you submit any changes, you should be aware of the following terms.{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
-    {% blocktrans %}
-      Your contribution will be released into the Public Domain, and then
-      submitted to OpenStreetMap by {{ site_name }}.
-    {% endblocktrans %}
+    {% blocktrans %}Your contribution will be released into the Public Domain, and then submitted to OpenStreetMap by {{ site_name }}.{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
-    {% blocktrans %}
-      Your changes will be checked by a member of the {{ site_name }} team
-      before being uploaded. {{ site_name }} may tidy or normalise the data you
-      provide before they are uploaded using the {{ site_name }} OSM account.
-    {% endblocktrans %}
+    {% blocktrans %}Your changes will be checked by a member of the {{ site_name }} team before being uploaded. {{ site_name }} may tidy or normalise the data you provide before they are uploaded using the {{ site_name }} OSM account.{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
-    {% blocktrans %}
-      If you would like to be named as the original author of the changes,
-      please provide your name and tick the attribution box. Your e-mail
-      address will never be submitted to OSM, but may be used by us to clarify
-      any changes you provide.
-    {% endblocktrans %}
+    {% blocktrans %}If you would like to be named as the original author of the changes, please provide your name and tick the attribution box. Your e-mail address will never be submitted to OSM, but may be used by us to clarify any changes you provide.{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
     {% url places:static-openstreetmap as osm_url %}
-    {% blocktrans %}
-      You may be interested to read <a href="{{ osm_url }}">further information about
-      OpenStreetMap and other ways in which one may contribute</a>.
-    {% endblocktrans %}
+    {% blocktrans %}You may be interested to read <a href="{{ osm_url }}">further information about OpenStreetMap and other ways in which one may contribute</a>.{% endblocktrans %}
     </p>
   </div></div>
 </div>
@@ -60,9 +41,7 @@
 <div class="section">
   <h2>{% trans "Map" %}</h2>
   <div class="note"><div class="bubble pad-10">
-	{% blocktrans with entity.primary_type.verbose_name as type_name and entity.title as title %}
-            You are submitting an update to the {{ type_name }} <em>&quot;{{ title }}&quot;</em>.
-	{% endblocktrans %}
+	{% blocktrans with entity.primary_type.verbose_name as type_name and entity.title as title %}You are submitting an update to the {{ type_name }} <em>&quot;{{ title }}&quot;</em>.{% endblocktrans %}
   </div>
   
   {% render_location_map entity.location %}
@@ -73,10 +52,7 @@
 <form method="post" action=".">
   {% csrf_token %}
     <p>
-    {% blocktrans %}
-	Not all fields will be relevant to the item you are updating, and all
-	fields are optional.
-    {% endblocktrans %}
+    {% trans "Not all fields will be relevant to the item you are updating, and all fields are optional." %}
     </p>
       
 <table>
@@ -137,10 +113,7 @@
     
     <tr>
       <th colspan="2">
-        {% blocktrans %}
-            This next two about food apply mostly to pubs. For things that obviously serve food (e.g.
-            restaurants), feel free to leave this empty.
-        {% endblocktrans %}
+        {% trans "This next two about food apply mostly to pubs. For things that obviously serve food (e.g. restaurants), feel free to leave this empty." %}
       </th>
     </tr>
     <tr>
@@ -154,10 +127,7 @@
 
     <tr>
       <th colspan="2">
-	{% blocktrans %}
-            If there is an ATM accessible at all hours here, please set this. This
-            may be left blank if you are editing an ATM.
-	{% endblocktrans %}
+	{% trans "If there is an ATM accessible at all hours here, please set this. This may be left blank if you are editing an ATM." %}
       </th>
     </tr>
     <tr>
@@ -167,10 +137,7 @@
 
     <tr>
       <th colspan="2">
-	{% blocktrans %}
-            The following only apply to post boxes. The reference is normally
-            printed at the bottom of the details on the post box.
-	{% endblocktrans %}
+	{% trans "The following only apply to post boxes. The reference is normally printed at the bottom of the details on the post box." %}
       </th>
     </tr>
     <tr>
@@ -194,10 +161,7 @@
 
     <tr>
       <th colspan="2">
-        {% blocktrans %}
-            If you have any other information you think should be included, please
-            tell us about it here.
-        {% endblocktrans %}
+        {% trans "If you have any other information you think should be included, please tell us about it here." %}
       </th>
     </tr>
     <tr>
@@ -207,10 +171,7 @@
   <tfoot>
     <tr>
       <th colspan="2">
-        {% blocktrans %}
-            If you are happy with your changes and agree to the terms above, you
-            may now click 'Submit'.
-        {% endblocktrans %}
+        {% trans "If you are happy with your changes and agree to the terms above, you may now click 'Submit'." %}
       </th>
     </tr>
     <tr>
