--- a/molly/apps/places/templates/places/update_osm_done.html
+++ b/molly/apps/places/templates/places/update_osm_done.html
@@ -11,10 +11,7 @@
   
   <div class="section-content" style="text-align:left;">
     <p>
-	  {% blocktrans %}
-      Your changes have been submitted and will be checked shortly. Thank you
-      for contributing to both {{ site_name }} and OpenStreetMap!
-	  {% endblocktrans %}
+	{% blocktrans %}Your changes have been submitted and will be checked shortly. Thank you for contributing to both {{ site_name }} and OpenStreetMap!{% endblocktrans %}
     </p>
     
     <p>
