--- a/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/apps/service_status/templates/service_status/index.html
@@ -5,9 +5,7 @@
 {% for slug, name, lastBuildDate, statuses, announcements in services %}
 <div class="section">
   <div class="header">
-    <h2>{% blocktrans with lastBuildDate|date:"DATETIME_FORMAT" as updated_date %}
-        {{ name }} <small>at {{ updated_date }}</small>
-    {% endblocktrans %}</h2>
+    <h2>{% blocktrans with lastBuildDate|date:"DATETIME_FORMAT" as updated_date %}{{ name }} <small>at {{ updated_date }}</small>{% endblocktrans %}</h2>
   </div>
   {% if announcements %}
   <h3 class="invisible">{% trans "Service announcements" %}</h3>
