--- a/molly/auth/templates/auth/oauth/authorize.html
+++ b/molly/auth/templates/auth/oauth/authorize.html
@@ -9,27 +9,13 @@
   
   <div class="section-content">
     <p style="font-size:1.2em">
-      {% blocktrans %}
-      This page provides information from {{ service_name }}, requiring you to
-      allow access from {{ site_name }} to your {{ service_name }} account.
-      {% endblocktrans %}
+      {% blocktrans %}This page provides information from {{ service_name }}, requiring you to allow access from {{ site_name }} to your {{ service_name }} account.{% endblocktrans %}
     </p>
     <p style="font-size:1.2em">
-      {% blocktrans %}
-      Select <strong>Proceed&hellip;</strong> to be redirected to
-      {{ service_name }} to confirm that you agree that access should be
-      granted. If this page is not what you expected, select
-      <strong>Cancel</strong>.
-      {% endblocktrans %}
+      {% blocktrans %}Select <strong>Proceed&hellip;</strong> to be redirected to {{ service_name }} to confirm that you agree that access should be granted. If this page is not what you expected, select<strong>Cancel</strong>.{% endblocktrans %}
     </p>
     <p>
-      {% blocktrans %}
-      To revoke access from {{ site_name }} in the future, you can do so from
-      within {{ service_name }} (refer to the {{ service_name }} documentation
-      for information on how to do this). If you wish to remove access from one
-      of your devices, head to <em>Security preferences</em> at the bottom of
-      any authenticated page on {{ site_name }}.
-      {% endblocktrans %}
+      {% blocktrans %}To revoke access from {{ site_name }} in the future, you can do so from within {{ service_name }} (refer to the {{ service_name }} documentation for information on how to do this). If you wish to remove access from one of your devices, head to <em>Security preferences</em> at the bottom of any authenticated page on {{ site_name }}.{% endblocktrans %}
     </p>
     
     <div class="button">
