--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -9,13 +9,8 @@
 <div class="section">
     <h2>{% trans "Be aware" %}</h2>
     <div class="note"><div class="bubble pad-10">
-            <p>
-	    {% blocktrans %}
-		Using this site may incur a cost of data transmission
-                from your network provider. Many providers now offer
-                "unlimited" day, week or month passes, please check with
-                your provider for more information.
-	    {% endblocktrans %}
-	    </p>
+        <p>
+	    {% trans "Using this site may incur a cost of data transmission from your network provider. Many providers now offer \"unlimited\" day, week or month passes, please check with your provider for more information." %}
+	</p>
     </div></div>
 </div>
