--- a/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/apps/contact/templates/contact/result_list.html
@@ -21,11 +21,7 @@
     {% endif %}
     <div class="section-content{% if results %} no-round-bottom{% endif %}">
       <div class="note"><div class="bubble pad-10">
-        {% blocktrans count results|length as counter %}
-        	Your search returned one item.
-			{% plural %}
-			Your search return {{ counter }} items.
-        {% endblocktrans %}
+        {% blocktrans count results|length as counter %}Your search returned one item.{% plural %}Your search returned {{ counter }} items.{% endblocktrans %}
 		{# If there are too many results suggest that the user uses more specific criteria #}
         {% if results|length|gte:40 %}
           {% trans "Try adding an initial to get more specific results." %}
