--- a/molly/apps/feature_vote/templates/feature_vote/index.html
+++ b/molly/apps/feature_vote/templates/feature_vote/index.html
@@ -7,15 +7,11 @@
   <p><strong>{% trans "Thank you for submitting a feature request! It is pending moderation, and should appear shortly." %}</strong></p>
 {% else %}
   <p>
-  {% blocktrans %}
-    Do you have something you'd like to see added to {{ site_name }}?
-  {% endblocktrans %}
+  {% blocktrans %}Do you have something you'd like to see added to {{ site_name }}?{% endblocktrans %}
   </p>
   
   <p>
-    {% blocktrans  %}
-    You can vote or comment on existing suggestions, or use the <a href="#submit-feature">form at the bottom of the page</a> to add a new suggestion.
-    {% endblocktrans %}
+    {% blocktrans %}You can vote or comment on existing suggestions, or use the <a href="#submit-feature">form at the bottom of the page</a> to add a new suggestion.{% endblocktrans %}
   </p>
 {% endif %}
 </div>
@@ -32,17 +28,11 @@
       <h3><a href="{% url feature_vote:feature-detail feature.id %}">{{ feature.title }}</a></h3>
        
       <p><small>
-    {% blocktrans with feature.user_name as user_name and feature.created|timesince as created_timesince %}
-        by {{ user_name }}, added {{ created_timesince }} ago
-    {% endblocktrans %}
+    {% blocktrans with feature.user_name as user_name and feature.created|timesince as created_timesince %}by {{ user_name }}, added {{ created_timesince }} ago{% endblocktrans %}
       </small></p>
       <p>{{ feature.description|truncatewords:20 }}</p>
       <p>
-      {% blocktrans count comment_count as comment_count  %}
-        one comment.
-        {% plural %}
-        {{ comment_count }} comments.
-      {% endblocktrans %}
+      {% blocktrans count comment_count as comment_count %}one comment.{% plural %}{{ comment_count }} comments.{% endblocktrans %}
         <a href="{% url feature_vote:feature-detail feature.id %}">
           {% if comment_count %}{% trans "Read more&hellip;" %}{% else %}{% trans "Be the first to comment&hellip;" %}{% endif %}
         </a>
