--- a/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/apps/places/templates/places/metadata/osm.html
@@ -23,11 +23,9 @@
     {% if entity.metadata.osm.tags.phone %}
       <li>
           <a class="phone" href="{{ entity.metadata.osm.tags.phone|telephone_uri }}">
-			  {% blocktrans with entity.title as title %}
-			  	Call <em>{{ title }}</em>
-			  {% endblocktrans %}
-			  <br/>
-              <small>{{ entity.metadata.osm.tags.phone|telephone:"nolink" }}</small>
+            {% blocktrans with entity.title as title %}Call <em>{{ title }}</em>{% endblocktrans %}
+            <br/>
+            <small>{{ entity.metadata.osm.tags.phone|telephone:"nolink" }}</small>
           </a>
       </li>
     {% endif %}
