--- a/molly/apps/places/templates/places/metadata/transit_status.html
+++ b/molly/apps/places/templates/places/metadata/transit_status.html
@@ -2,11 +2,7 @@
 {% if transit_status %}    
     <div class="section">
         <div class="header">
-            <h2>
-				{% blocktrans with transit_status.service_name as service_name %}
-					{{ service_name }} line status
-				{% endblocktrans %}
-			</h2>
+            <h2>{% blocktrans with transit_status.service_name as service_name %}{{ service_name }} line status{% endblocktrans %}</h2>
         </div>
         <table class="content">
             <thead>
