--- a/molly/apps/places/templates/places/service_details.html
+++ b/molly/apps/places/templates/places/service_details.html
@@ -13,35 +13,26 @@
   
   <ul class="content-list">
     <li>
-	{% blocktrans %}
-	There is currently a problem retrieving live departure information from
-    the National Rail web site. Departure information may still be accessed
-    <a href="http://pda.ojp.nationalrail.co.uk/en/pj/ldbboard/dep/{{ entity.identifiers.crs }}">directly
-    from their web site</a>.
-	{% endblocktrans %}
-	</li>
+	{% blocktrans %}There is currently a problem retrieving live departure information from the National Rail web site. Departure information may still be accessed<a href="http://pda.ojp.nationalrail.co.uk/en/pj/ldbboard/dep/{{ entity.identifiers.crs }}">directly from their web site</a>.{% endblocktrans %}
+    </li>
   </ul>
   
   {% else %}
   
   <ul class="content-list no-round-bottom">
     <li>
-	{% blocktrans with train_service.ldb.operator as operator %}
-		Operated by {{ operator }}
-    {% endblocktrans %}
-	</li>
+	{% blocktrans with train_service.ldb.operator as operator %}Operated by {{ operator }}{% endblocktrans %}
+    </li>
     {% if train_service.ldb.platform %}
-		<li>
-		{% blocktrans with train_service.ldb.platform as platform %}
-			Calling at platform {{ platform }}
-		{% endblocktrans %}
-		</li>
+    <li>
+	{% blocktrans with train_service.ldb.platform as platform %}Calling at platform {{ platform }}{% endblocktrans %}
+    </li>
     {% endif %}
     {% if train_service.ldb.disruptionReason %}
-		<li>{{ train_service.ldb.disruptionReason|sanitize_html }}</li>
+	<li>{{ train_service.ldb.disruptionReason|sanitize_html }}</li>
     {% endif %}
     {% if train_service.ldb.overdueMessage %}
-      <li>{{ train_service.ldb.overdueMessage|sanitize_html }}</li>
+        <li>{{ train_service.ldb.overdueMessage|sanitize_html }}</li>
     {% endif %}
   </ul>
 
@@ -59,10 +50,8 @@
           <tr>
             <td colspan="3">
                 <p>
-				{% blocktrans with point.joining.0.locationName as location %}
-                	This train then merges with a train from {{ location }}
-                {% endblocktrans %}
-				</p>
+		    {% blocktrans with point.joining.0.locationName as location %}This train then merges with a train from {{ location }}{% endblocktrans %}
+		</p>
                 <table class="content">
                   <thead>
                     <tr>
@@ -93,10 +82,8 @@
           <tr>
             <td colspan="3">
                 <p>
-				{% blocktrans with point.splitting.destination as destination %}
-					This train then splits to go to {{ destination }}
-				{% endblocktrans %}
-				</p>
+		    {% blocktrans with point.splitting.destination as destination %}This train then splits to go to {{ destination }}{% endblocktrans %}
+		</p>
                 <table class="content">
                   <thead>
                     <tr>
