--- a/molly/auth/templates/auth/oauth/error.html
+++ b/molly/auth/templates/auth/oauth/error.html
@@ -11,45 +11,20 @@
 {% url home:index as home_url %}
 {% ifequal error "oauth_problem" %}
   {% ifequal oauth_problem "permission_denied" %}
-    {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}
-      You did not give {{ site_name }} permission to access your data held with
-      {{ service_name }}. You may <a href=".?skip_interstitial=true">try again</a>, go
-      <a href="{{ last_url }}" title="{{ last_page }}">back to the
-      {{ service_name }} page</a>, or back to the
-      <a href="{{ home_url }}">{{ site_name }} homepage</a>.
-    {% endblocktrans %}
+    {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}You did not give {{ site_name }} permission to access your data held with {{ service_name }}. You may <a href=".?skip_interstitial=true">try again</a>, go <a href="{{ last_url }}" title="{{ last_page }}">back to the {{ service_name }} page</a>, or back to the <a href="{{ home_url }}">{{ site_name }} homepage</a>.{% endblocktrans %}
   {% else %}
     {% ifequal oauth_problem "token_expired" %}
       {% ifequal token_type "access" %}
-        {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}
-          {{ site_name }} was unable to access your data held with {{ service_name }},
-          most likely because you have revoked permission from within
-          {{ service_name }}. If you'd still like to access {{ service_name }} from
-          {{ site_name }} <a href=".?skip_interstitial=true">renew {{ site_name }}'s permissions</a>.
-          Alternatively, you can go
-          <a href="{{ last_url }}" title="{{ last_page }}">back to the
-          {{ service_name }} page</a>, or back to the
-          <a href="{{ home_url }}">{{ site_name }} homepage</a>.
-        {% endblocktrans %}
+        {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}{{ site_name }} was unable to access your data held with {{ service_name }}, most likely because you have revoked permission from within {{ service_name }}. If you'd still like to access {{ service_name }} from {{ site_name }} <a href=".?skip_interstitial=true">renew {{ site_name }}'s permissions</a>. Alternatively, you can go <a href="{{ last_url }}" title="{{ last_page }}">back to the {{ service_name }} page</a>, or back to the <a href="{{ home_url }}">{{ site_name }} homepage</a>.{% endblocktrans %}
       {% else %}
-        {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}
-          There was an unexpected error. You can <a href=".?skip_interstitial=true">try again</a>, go
-          <a href="{{ last_url }}" title="{{ last_page }}">back to the
-          {{ service_name }} page</a>, or back to the
-          <a href="{{ home_url }}">{{ site_name }} homepage</a>.
-        {% endblocktrans %}
+        {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}There was an unexpected error. You can <a href=".?skip_interstitial=true">try again</a>, go <a href="{{ last_url }}" title="{{ last_page }}">back to the {{ service_name }} page</a>, or back to the <a href="{{ home_url }}">{{ site_name }} homepage</a>.{% endblocktrans %}
       {% endifequal %}
     {% else %}
       
     {% endifequal %}
   {% endifequal %}
 {% else %}
-  {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}
-    There was an unexpected error. You can <a href=".?skip_interstitial=true">try again</a>, go
-    <a href="{{ last_url }}" title="{{ last_page }}">back to the
-    {{ service_name }} page</a>, or back to the
-    <a href="{{ home_url }}">{{ site_name }} homepage</a>.
-  {% endblocktrans %}
+  {% blocktrans with breadcrumbs.1.1 as last_url and breadcrumbs.1.0 as last_page %}There was an unexpected error. You can <a href=".?skip_interstitial=true">try again</a>, go <a href="{{ last_url }}" title="{{ last_page }}">back to the {{ service_name }} page</a>, or back to the <a href="{{ home_url }}">{{ site_name }} homepage</a>.{% endblocktrans %}
 {% endifequal %}
   </div>
 </div>
