--- a/molly/templates/static/openstreetmap.html
+++ b/molly/templates/static/openstreetmap.html
@@ -1,27 +1,13 @@
 {% load i18n %}
+
 <div class="section-nopad">
   <h2>{% trans "OpenStreetMap" %}</h2>
 
   <div class="section-content">
-    <p>{% blocktrans %}
-      OpenStreetMap (OSM) is a community-led mapping project providing free
-      geographic data to anyone who wants them.
-    {% endblocktrans %}</p>
-    <p>{% blocktrans %}
-      {{ site_name }} uses OSM data under the Creative Commons Attribution-Share
-      Alike (CC-BY-SA) 2.0 license to provide maps and points-of-interest data.
-    {% endblocktrans %}</p> 
-    <p>{% blocktrans %}
-      Should you wish to contribute to OSM, you can either submit corrections
-      though {{ site_name }} (there's a <em>Suggest a correction</em> link at the
-      bottom of each OSM-derived page), or set up an OSM account and edit
-      directly. For more information on getting started, see the Beginners'
-      Guide (link below) on the OpenStreetMap website.
-    {% endblocktrans %}</p>
-    <p>{% blocktrans %}
-      Here are some useful links you may want to browse from a non-mobile
-      browser:
-    {% endblocktrans %}</p>
+    <p>{% trans "OpenStreetMap (OSM) is a community-led mapping project providing free geographic data to anyone who wants them." %}</p>
+    <p>{% blocktrans %}{{ site_name }} uses OSM data under the Creative Commons Attribution-Share Alike (CC-BY-SA) 2.0 license to provide maps and points-of-interest data.{% endblocktrans %}</p> 
+    <p>{% blocktrans %}Should you wish to contribute to OSM, you can either submit corrections though {{ site_name }} (there's a <em>Suggest a correction</em> link at the bottom of each OSM-derived page), or set up an OSM account and edit directly. For more information on getting started, see the Beginners' Guide (link below) on the OpenStreetMap website.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Here are some useful links you may want to browse from a non-mobile browser:{% endblocktrans %}</p>
     <dl>
       <dt>{% trans "Creative Commons Attribution-Share Alike 2.0 license" %}</dt>
       <dd><a href="http://creativecommons.org/licenses/by-ca/2.0/">http://creativecommons.org/licenses/by-ca/2.0/</a></dd>
@@ -34,4 +20,3 @@
     </dl>
   </div>
 </div>
-
