Tweaks to i18n to catch a few edge cases

--- a/molly/apps/desktop/templates/desktop/index.html
+++ b/molly/apps/desktop/templates/desktop/index.html
@@ -265,7 +265,7 @@ img.shadow {
 
 		<div class="span-24 append-1 last align-center"><img
 		    src="{{ STATIC_URL }}desktop/images/phones.png" height="500" width="450"
-		    alt="{% trans 'Various phones showing {{ site_name }}' %}" />
+		    alt="{% blocktrans %}Various phones showing {{ site_name }}{% endblocktrans %}" />
 		</div>
 
 		<div class="prepend-1 span-40 append-1 last prepend-top">
