--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -5,22 +5,22 @@
 {% load molly_search %}
 
 {% comment %}
-	index.html
-	The root home page
-	
-	block list - indentation defines hierarchy 
-	==========================================
-	- site_title (the title for the front page of the site)
-	- title 
-	
-	- header
-	- content
-	  - date
-	  :: The following are using the incorrect naming convention (dashes rather than underscores)
-	  - weather-location
-	  - below-weather
-	
-	  - below_about
+        index.html
+        The root home page
+        
+        block list - indentation defines hierarchy 
+        ==========================================
+        - site_title (the title for the front page of the site)
+        - title 
+        
+        - header
+        - content
+          - date
+          :: The following are using the incorrect naming convention (dashes rather than underscores)
+          - weather-location
+          - below-weather
+        
+          - below_about
 {% endcomment %}
 
 {% block site_title %}{% endblock site_title %}
@@ -31,121 +31,121 @@
 
 {# Displayed on the home page - contains brand mark and universal search form #}
 <div id="index-header">
-	{# Brandmark for site #}
+    {# Brandmark for site #}
     <div id="index-title">
-	
-		{# Display a logo (should be on white background) for featurephones: should be .jpg for compatibility #}
-		{% ifequal style_group "dumb" %}
-		    <img width="90" height="55" src="{{ STATIC_URL }}site/images/logos/logo-90x55.jpg" alt="{{ site_name }}">
-		{% else %}
-		
-			{# Display a different logo at Christmas time! (non-featurephones only, as featurephones don't believe in Christmas) #}
-			{% if is_christmas %}
-	        <img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px-christmas.png" alt="{{ site_name }}"/>
-		 	{% else %}
-			{# Standard logo for non-featurephones #}
-		    <img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px.png" alt="{{ site_name }}"/>
-			{% endif %}
+        
+	{# Display a logo (should be on white background) for featurephones: should be .jpg for compatibility #}
+	{% ifequal style_group "dumb" %}
+	    <img width="90" height="55" src="{{ STATIC_URL }}site/images/logos/logo-90x55.jpg" alt="{{ site_name }}">
+	{% else %}
+	    {# Display a different logo at Christmas time! (non-featurephones only, as featurephones don't believe in Christmas) #}
+	    {% if is_christmas %}
+		<img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px-christmas.png" alt="{{ site_name }}"/>
+	    {% else %}
+		{# Standard logo for non-featurephones #}
+		<img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px.png" alt="{{ site_name }}"/>
+	    {% endif %}
         {% endifequal %}
     </div>
 
-	{# universal search form #}
+        {# universal search form #}
     <div id="index-search">
         {% search_form %}
-	     <form method="get" action="{% url search:index %}">
-		 <p>
-			{{ search_form.query }}
+	<form method="get" action="{% url search:index %}">
+	    <p>
+		{{ search_form.query }}
 		{# Give featurephones a simple search button #}
 		{% ifequal style_group "dumb" %}
 		    <input type="submit" value="{% trans 'Search' %}" />
 		{% else %}
-		{# Give non-featurephones an image search button #}
-			<input type="image" src="{{ STATIC_URL }}site/images/buttons/search-button.png" title="{% trans 'Search' %}" alt="{% trans 'Search' %}"/>
+		    {# Give non-featurephones an image search button #}
+		    <input type="image" src="{{ STATIC_URL }}site/images/buttons/search-button.png" title="{% trans 'Search' %}" alt="{% trans 'Search' %}"/>
 		{% endifequal %}
-		 </p>
-		 </form>
-	</div>
+	    </p>
+	</form>
+    </div>
 </div>
 {% endblock header %}
 
 {% block content %}
-	{# Display messages to the user such as warnings for Opera Mini #}
+        {# Display messages to the user such as warnings for Opera Mini #}
     {% if messages %}
     <div class="section">
       <ul class="content-list">
         {% for message in messages %}
-	  <li>{{ message|sanitize_html }}</li>
+          <li>{{ message|sanitize_html }}</li>
         {% endfor %}
       </ul>
     </div>
     {% endif %}
 
-	{# The main icon bubble for non-featurephones, access keys are defined in the view #}
+    {# The main icon bubble for non-featurephones, access keys are defined in the view #}
     <div class="bubble">
-	<div class="center">
-    	<ol class="icon-menu">
-		  {% for application in applications %}{% if application.display_to_user %}
-	          <li id="menu-{{ application.local_name }}">
-	              <a {% if application.accesskey %} accesskey="{{ application.accesskey }}"{% endif %} href="{{ application.url }}">{{ application.title }}</a>
-	          </li>
-	      {% endif %}{% endfor %}
+        <div class="center">
+	    <ol class="icon-menu">
+		{% for application in applications %}{% if application.display_to_user %}
+		    <li id="menu-{{ application.local_name }}">
+			<a {% if application.accesskey %} accesskey="{{ application.accesskey }}"{% endif %} href="{{ application.url }}">{% trans application.title %}</a>
+		    </li>
+		{% endif %}{% endfor %}
 	    </ol>
+	</div>
     </div>
-    </div>
-	
-	{# The a div to display various 'quick' bits of information #}
+        
+        {# The a div to display various 'quick' bits of information #}
     <div class="bubble pad-5">
         <table style="width:100%; text-align:center;">
             <tbody>
                 <tr>
                     <td style="width:50%">
-					{% block date %}
- 						{% now "l, jS F, Y" %}
-                    {% endblock date %}
-					</td>
+                        {% block date %}
+                            {% now "l, jS F, Y" %}
+			{% endblock date %}
+                    </td>
                     <td style="width:50%; font-size:1.2em">
-      {% weather %}{% block weather-location %}{{ weather.name }}{% endblock weather-location %}: {{ weather.temperature }}&deg;C<img src="{{ STATIC_URL }}weather/images/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
+			{% weather %}
+			{% block weather-location %}{{ weather.name }}{% endblock weather-location %}: {{ weather.temperature }}&deg;C<img src="{{ STATIC_URL }}weather/images/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
                     </td>
                 </tr>
-				{% block below-weather %}{% endblock below-weather %}
+                {% block below-weather %}{% endblock below-weather %}
             </tbody>
         </table>
     </div>
     
-	{# Display a list of favourite pages if a user has made any #}
+    {# Display a list of favourite pages if a user has made any #}
     {% if favourites %}
     <div class="section">
       <div class="header">
-		<h2>{% trans "Favourites" %}</h2>
+                <h2>{% trans "Favourites" %}</h2>
       </div>
       <ul class="link-list">
-      {% for favourite in favourites %}
-		<li class="favourite-link">
-			<a href="{{ favourite.url }}">{{ favourite.metadata.title|safe }}
-          		{% if favourite.metadata.additional %}
-				<br /><span class="additional">{{ favourite.metadata.additional|safe }}</span>
-				{% endif %}
-			</a>
-		</li>
-      {% endfor %}
-		<li><a href="{% url favourites:index %}"><strong>{% trans "Manage Favourites" %}</strong></a></li>
+	{% for favourite in favourites %}
+	  <li class="favourite-link">
+	    <a href="{{ favourite.url }}">{{ favourite.metadata.title|safe }}
+	    {% if favourite.metadata.additional %}
+		    <br /><span class="additional">{{ favourite.metadata.additional|safe }}</span>
+		    {% endif %}
+	    </a>
+	  </li>
+	{% endfor %}
+        <li><a href="{% url favourites:index %}"><strong>{% trans "Manage Favourites" %}</strong></a></li>
       </ul>
     </div>
     {% endif %}
 
     <ul class="stand-alone link-list round-top">
-	{% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
+        {% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
             <li class="round-top"><a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></li>
-	{% endif %}
-	<li><a href="{% url home:static_about %}">{% trans "About this site" %}</a></li>
-	{% if has_user_messages %}
+        {% endif %}
+        <li><a href="{% url home:static_about %}">{% trans "About this site" %}</a></li>
+        {% if has_user_messages %}
             <li><a href="{% url home:messages %}">{% trans "Read messages from the developers" %}</a></li>
-	{% endif %}
+        {% endif %}
         <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">{% trans "Provide feedback" %}</a></li>
     </ul>
 
-	{% block below-about %}
-	{% endblock below-about %}
-	{% include "i18n/language_selector.html" %}
+    {% block below-about %}
+    {% endblock below-about %}
+    {% include "i18n/language_selector.html" %}
 
 {% endblock content %}
