Use non-i18n version of podcast medium for podcast image type slug

--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -10,7 +10,7 @@
     <h2>{% trans "Be aware" %}</h2>
     <div class="note"><div class="bubble pad-10">
         <p>
-	    {% trans "Using this site may incur a cost of data transmission from your network provider. Many providers now offer \"unlimited\" day, week or month passes, please check with your provider for more information." %}
+	    {% trans "Using this site may incur a cost of data transmission from your network provider. Many providers now offer 'unlimited' day, week or month passes, please check with your provider for more information." %}
 	</p>
     </div></div>
 </div>
