--- a/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -53,7 +53,7 @@
       
       <small>
 	  {# Significant whitespace on next line #}
-      {% trans "Published:" %} {{ item.published_date|date:"j M Y" }}
+      {% trans "Published:" %} {{ item.published_date|date:"DATE_FORMAT" }}
       </small><br />
     <div style="line-height:1.1em; margin-top:5px">
       {{ item.description|safe }}
@@ -64,7 +64,7 @@
       <li style="vertical-align:middle;">
 	    
         <a href="{{ enc.url }}{% block after_encurl %}{% endblock %}" style="vertical-align:middle; font-size:11px">
-        <img src="{{ STATIC_URL }}site/images/icons/list-{{ enc.medium }}.png" style="vertical-align:middle; margin:2px;" alt="({{ enc.medium }})"/>
+        <img src="{{ STATIC_URL }}site/images/icons/list-{{ enc.medium }}.png" style="vertical-align:middle; margin:2px;" alt="({% trans enc.medium %})"/>
           {% if item.duration %}{{ item.duration|humanize_seconds }}, {% endif %}{{ enc.get_mimetype_display|capfirst }}, {{ enc.length|filesizeformat }}
           </a>
         </li>
